--- a/style.css
+++ b/style.css
@@ -30,26 +30,37 @@
     box-sizing: border-box;
 }
 
-
 html, 
-body {
+body{
     height: 100vh;
 
 }
 
-
-
-body{
-    
+body{    
     background: var(--color-background);
     display: flex;
     align-items: center;
     justify-content: center; 
+    
 }
 
 
-h1, span, a {
-    width: 20px;
+body,
+input,
+button,
+textarea {
+   /*font: 500 1.6rem Poppoins; */
+   font-weight: 500;
+   font-family: Poppins;
+   font-size: 1.6rem;
+    color: var(--color-text-base);
 
 }
+
+#container {
+    width: 90vw;
+    max-width: 700px;
+    
+}
+
 
