--- a/styles/partials/page-landin.css
+++ b/styles/partials/page-landin.css
@@ -1,4 +1,4 @@
-:root{
+:root {
     font-size: 40%;
 }
 
@@ -6,7 +6,27 @@
     background: var(--color-primary);
 }
 
-#page-landing {
-    background: var(--color-text-in-primary);
+#page-landing #container {
+    color: var(--color-text-in-primary);
+}
+
+.logo-container img {
+    height: 10rem;
+}
+
+.logo-container {
+    text-align: center;
+    margin-bottom: 3.2rem;
+}
+
+.logo-container h2{
+    font-weight: 500;
+    font-size: 3.6rem;
+    line-height: 4.6rem;
+    margin-top: 0.8rem;
+}
+
+.hero-image{
+    width: 100%;
 }
 
