--- a/styles/partials/page-landin.css
+++ b/styles/partials/page-landin.css
@@ -84,6 +84,20 @@
 .total-connections {
     font-size: 1.8rem;
 
-    
+    display: flex;
+    align-items: center;
+    justify-content: center;
 
+}
+
+.total-connections img{
+    margin-left: 0.8rem;
+}
+
+@media (min-width: 1100px) {
+    #page-landing #container {
+        max-width: 1100px;
+        display: grid;
+        grid-template-columns: 100px 300px;
+    }
 }
