--- a/styles/partials/page-landin.css
+++ b/styles/partials/page-landin.css
@@ -98,6 +98,23 @@
     #page-landing #container {
         max-width: 1100px;
         display: grid;
-        grid-template-columns: 100px 300px;
+        grid-template-columns: 2fr 1fr 2fr;
+        grid-template-rows: 350px 1fr;
+        grid-template-areas: 
+        "proffy image image"
+        "button button texting"
+    }
+
+    .logo-container {
+        grid-area: proffy;
+    }
+     .hero-image {
+        grid-area: image;
+    }
+    .buttons-container {
+        grid-area: button;
+    }
+    .total-connections {
+        grid-area:texting;
     }
 }
