--- a/styles/partials/page-landin.css
+++ b/styles/partials/page-landin.css
@@ -114,14 +114,17 @@
         grid-area: proffy;
         text-align: initial;
         align-self: center;
+        margin: 0;
     }
 
     .logo-container img{
-        height: 100%;
+        height: 127px;
+
     }
 
      .hero-image {
         grid-area: image;
+        height: 350px;
     }
     .buttons-container {
         grid-area: button;
@@ -131,5 +134,6 @@
     .total-connections {
         grid-area:texting; 
         justify-self: end;
+        font-size: 1.2rem;
     }
 }
