--- a/styles/partials/page-study.css
+++ b/styles/partials/page-study.css
@@ -10,7 +10,7 @@
         flex-direction: column;
     }
 
-    .page-header .top-bar-container{
+    .page-header .top-bar-container {
         width: 90%;
         margin: 0 auto;
 
@@ -22,11 +22,27 @@
     }
 
     .page-header .top-bar-container a {
-        height: 3.2rem 0;
-        opacity: 0.2;
+        height: 3.2rem;
+        transition: opacity 0.2s;
     }
 
+    .page-header .top-bar-container a:hover{
+        opacity: 0.6;
+    }
    
     .page-header .top-bar-container img {
         height: 1.6rem;
     }
+
+    .page-header .header-content {
+        width: 90%;
+        margin: 3.2rem auto;
+    }
+
+    .page-header .header-content strong {
+        font: 700 3.6rem Archivo;
+        line-height: 4.2rem;
+        color: var(--color-title-in-primary);
+    }
+
+    
