--- a/styles/partials/page-study.css
+++ b/styles/partials/page-study.css
@@ -113,4 +113,15 @@
         bottom: 0px; 
     }
 
+    #page-study main {
+        margin: 3.2rem auto;
+        width: 90%;
+    }
+
+    #pages-study article {
+        background-color: var(--color-box-base);
+        border: 1px solid var(--color-line-in-white);
+        border-radius: .8rem;
+        margin-top: 2.4rem;
+    }
     
