--- a/styles/partials/page-study.css
+++ b/styles/partials/page-study.css
@@ -118,10 +118,12 @@
         width: 90%;
     }
 
-    #pages-study article {
+    article {
         background-color: var(--color-box-base);
         border: 1px solid var(--color-line-in-white);
         border-radius: .8rem;
         margin-top: 2.4rem;
     }
+
+    article
     
