--- a/styles/partials/page-study.css
+++ b/styles/partials/page-study.css
@@ -118,12 +118,16 @@
         width: 90%;
     }
 
-    article {
+    .teacher-item {
         background-color: var(--color-box-base);
         border: 1px solid var(--color-line-in-white);
         border-radius: .8rem;
         margin-top: 2.4rem;
     }
 
-    article
+    .teacher-item header {
+        padding: 3.2rem 2rem;
+        display:flex;
+        align-items: center;
+    }
     
