--- a/styles/partials/page-study.css
+++ b/styles/partials/page-study.css
@@ -130,4 +130,10 @@
         display:flex;
         align-items: center;
     }
+
+    .teacher-item img {
+        width: 8rem;
+        height: 8rem;
+        border-radius: 50%
+    }
     
