--- a/styles/partials/page-study.css
+++ b/styles/partials/page-study.css
@@ -139,5 +139,21 @@
         border-radius: 50%
     }
     
+    /* 30/11/202 */
 
-    
+    .teacher-item header div {
+        margin-left: 2.4rem;
+    }
+
+    .teacher-item header div strong {
+        font: 700 2.4rem Archivo;
+        display: block;
+        color: var(--color-text-title);
+
+    }
+
+    .teacher-item header div span {
+        font-size: 1.6rem;
+        display: block;
+        margin-top: .4rem;
+    }
