--- a/styles/partials/page-study.css
+++ b/styles/partials/page-study.css
@@ -157,3 +157,15 @@
         display: block;
         margin-top: .4rem;
     }
+
+    .teacher-item p {
+        padding: 0 2rem;
+        font-size: 1.6rem;
+        line-height: 2.8rem;    
+    }
+
+    .teacher-item foooter {
+        padding: 3.2rem 2rem;
+        background-color: var(--color-box-footer);
+        border-top: 1px solid var(--color-line-in-white);
+    }
