--- a/styles/partials/page-study.css
+++ b/styles/partials/page-study.css
@@ -186,5 +186,22 @@
         font-size: 1.6rem;
         color: var(--color-primary);
         display: block;
+    }
+
+    /* 01/12/2020 */
+    .teacher-item footer button{
+        width: 20rem;
+        height: 5.6rem;
+        background: var(--color-secondary);
+        color: var(--color-button-text);
+        border: 0;
+        border-radius: .8rem;
+        cursor: pointer;
+        font: 700 1.4rem Archivos;
+        
+
+
+
+
 
     }
