--- a/styles/partials/page-study.css
+++ b/styles/partials/page-study.css
@@ -198,10 +198,13 @@
         border-radius: .8rem;
         cursor: pointer;
         font: 700 1.4rem Archivos;
-        
 
+        display: flex;
+        align-items: center;
+        justify-content: space-evenly;
 
+        text-decoration: none;
 
-
-
+        transition: background 0.2s;
+        margin-left: 1.6rem;
     }
