--- a/styles/partials/page-study.css
+++ b/styles/partials/page-study.css
@@ -164,7 +164,7 @@
         line-height: 2.8rem;    
     }
 
-    .teacher-item foooter {
+    .teacher-item footer {
         padding: 3.2rem 2rem;
         background-color: var(--color-box-footer);
         border-top: 1px solid var(--color-line-in-white);
