--- a/styles/partials/page-study.css
+++ b/styles/partials/page-study.css
@@ -136,7 +136,7 @@
     .teacher-item img {
         width: 8rem;
         height: 8rem;
-        border-radius: 50%
+        border-radius: 50%;
     }
     
     /* 30/11/202 */
