--- a/styles/partials/page-study.css
+++ b/styles/partials/page-study.css
@@ -222,6 +222,14 @@
             max-widhth: 100vw;
         }
 
+        .page-header {
+            height: 340px;
+        }
+
+        .page-header .top-bar-container {
+            max-width: 1100px;
+        }
+
         .teacher-intem header,
         .teacher-intem footer{
             padding: 32px;
