--- a/styles/partials/page-study.css
+++ b/styles/partials/page-study.css
@@ -219,7 +219,7 @@
 
     @media (min-width:700px) {
         #page-study #container {
-            max-widhth: 100vw;
+            max-width: 100vw;
         }
 
         .page-header {
@@ -233,7 +233,7 @@
         .page-header .header-content {
             max-width: 740px;
 
-            /* margin: 0 auto; */
+            margin: 0 auto;
 
             flex: 1 1;
             padding-bottom: 48px;
@@ -242,14 +242,20 @@
             justify-content: center; 
         }
 
-        .teacher-intem header,
-        .teacher-intem footer{
+        .page-header .header-content strong {
+            max-width:  350px;
+            
+
+        }
+
+        .teacher-item header,
+        .teacher-item footer{
             padding: 32px;
         }
 
         #search-teachers {
             display: grid;
-            grid-template-columns: repeat(4,1rf);
+            grid-template-columns: repeat(4, 1rf);
             gap: 16px;
             position: absolute;
             bottom: -28px;
