--- a/styles/partials/page-study.css
+++ b/styles/partials/page-study.css
@@ -260,5 +260,10 @@
             position: absolute;
             bottom: -28px;
         }
+
+        #page-study main {
+            padding: 32px 0;
+            max-width: 740px;
+        }
         
     }
