--- a/styles/partials/page-study.css
+++ b/styles/partials/page-study.css
@@ -264,6 +264,7 @@
         #page-study main {
             padding: 32px 0;
             max-width: 740px;
+            margin: 
         }
         
     }
