--- a/styles/partials/page-study.css
+++ b/styles/partials/page-study.css
@@ -156,7 +156,7 @@
 
     .teacher-item header div span {
         font-size: 1.6rem;
-        /*display: block; */
+        display: block;
         margin-top: .4rem;
     }
 
