--- a/styles/partials/page-study.css
+++ b/styles/partials/page-study.css
@@ -271,5 +271,21 @@
         #search-teachers .select-block {
             margin-bottom: 0;
         }
+
+        .teacher-item p {
+            padding: 0 32px;
+        }
         
+        .teacher-item footer p strong {
+            display: inital;
+            margin-left: 16px;
+        }
+
+        .teacher-item footer button    {
+            width: 245px;
+            font-size: 16px;
+            justify-content: center;
+        }
+
+
     }
