--- a/styles/partials/page-study.css
+++ b/styles/partials/page-study.css
@@ -296,6 +296,7 @@
             width: 245px;
             font-size: 16px;
             justify-content: center;
+            font-weight: 600;
         }
 
         .teacher-item footer button img {
