--- a/styles/partials/header.css
+++ b/styles/partials/header.css
@@ -5,3 +5,14 @@
         display: flex;
         flex-direction: colum;
     }
+
+    .page-header .top-bar-container {
+        width: 90%;
+        margin: 0 auto;
+
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+
+        padding: 1.6rem 0;
+    }
