--- a/styles/partials/header.css
+++ b/styles/partials/header.css
@@ -16,3 +16,10 @@
 
         padding: 1.6rem 0;
     }
+
+    .page-header . top-bar-container a {
+        height: 3.2rem;
+        transition: opacity 0.2s;
+    }
+
+    
