--- a/styles/partials/header.css
+++ b/styles/partials/header.css
@@ -1,25 +1,10 @@
+.page-hader {
+    background-color : var (--color-primary);
 
-    .page-header{
-        background-color: var(--color-primary);
+    display: flex;
+    flex-direction: column;
+}
 
-        display: flex;
-        flex-direction: colum;
-    }
 
-    .page-header .top-bar-container {
-        width: 90%;
-        margin: 0 auto;
-
-        display: flex;
-        align-items: center;
-        justify-content: space-between;
-
-        padding: 1.6rem 0;
-    }
-
-    .page-header . top-bar-container a {
-        height: 3.2rem;
-        transition: opacity 0.2s;
-    }
 
     
