--- a/styles/partials/header.css
+++ b/styles/partials/header.css
@@ -5,13 +5,29 @@
     flex-direction: column;
 }
 
-.page-header {
-    background-color: var(--color-primary);
+.page-hader .top-bar-container {
+    width: 90%;
+    margin: 0 auto;
 
     display: flex;
-    flex-direction: colum;
+    align-items: center;
+    justify-content: space-between;
+
+    padding: 1.6rem 0;
+}
+
+.page-header .top-bar-container a:hover{
+    opacity: 0.6;
+}
+
+.page-header .top-bar-container img {
+    height: 1.6rem;
+}
+
 
 }
+
+
 
 
 
