--- a/styles/partials/header.css
+++ b/styles/partials/header.css
@@ -31,6 +31,12 @@
     position: relative;
 }
 
+.page-header .header-content strong {
+    font: 700 3.6rem Archivo;
+    line-height: 4.2rem;
+    color: var(--color-title-in-primary);
+}
+
 
 
 
