--- a/styles/partials/header.css
+++ b/styles/partials/header.css
@@ -37,6 +37,19 @@
     color: var(--color-title-in-primary);
 }
 
+#search-teachers {
+    margin-top: 3.2rem;
+}
+
+#search-teachers label {
+    color: var(--color-text-in-primary)
+}
+
+#search-teachers .select-block {
+    margin-bottom: 1.4rem;
+}
+
+
 
 
 
