--- a/styles/partials/header.css
+++ b/styles/partials/header.css
@@ -49,7 +49,18 @@
     margin-bottom: 1.4rem;
 }
 
-
+#search-teachers button {
+    width: 100%;
+    height: 5.6rem;
+    background: var (--color-secondary);
+    color: var (--color-button-text);
+    border:0;
+    border-radius: .8rem;
+    cursor: pointer;
+    font: 700 1.6rem Archivo;
+    display: flex;
+    align-items
+}
 
 
 
