--- a/styles/partials/header.css
+++ b/styles/partials/header.css
@@ -90,6 +90,17 @@
         font: 1.6rem Archivo;
     }
 
+    .input-block {
+        position: relative;
+    }
 
+    .input-block:focus-within::affter {
+        content: "";
+
+        width: calc(100% - 3.2rem);
+        height: 2px;
+        background: var(--color-primary-light);
+        
+    }
 
     
