--- a/styles/partials/header.css
+++ b/styles/partials/header.css
@@ -100,7 +100,15 @@
         width: calc(100% - 3.2rem);
         height: 2px;
         background: var(--color-primary-light);
-        
+
+        position: absolute;
+        left: 1.6rem;
+        bottom: 0px;
+    }
+
+    #page-study main {
+        margin: 3.2rem auto;
+        width: 90%;
     }
 
     
