--- a/styles/partials/header.css
+++ b/styles/partials/header.css
@@ -1,79 +1,44 @@
-.page-hader {
-    background-color : var (--color-primary);
-
-    display: flex;
-    flex-direction: column;
-}
-
-.page-hader .top-bar-container {
-    width: 90%;
-    margin: 0 auto;
-
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-
-    padding: 1.6rem 0;
-}
-
-.page-header .top-bar-container a:hover{
-    opacity: 0.6;
-}
-
-.page-header .top-bar-container img {
-    height: 1.6rem;
-}
-
-.page-hader .header-content {
-    width: 90%;
-    margin: 3.2rem auto;
-    
-    position: relative;
-}
-
-.page-header .header-content strong {
-    font: 700 3.6rem Archivo;
-    line-height: 4.2rem;
-    color: var(--color-title-in-primary);
-}
-
-/* 18/12/2020 - video 03 00:07:30 */
-
-@media (min-width:700px) {
-    #page-study #container {
-        max-width: 100vw;
-    }
-}
 
     .page-header {
-        height: 340px;
+        background-color: var(--color-primary);
+
+        display: flex;
+        flex-direction: column;
     }
 
     .page-header .top-bar-container {
-        max-width: 740px;
-
+        width: 90%;
         margin: 0 auto;
-        flex: 1 1;
-        padding-bottom: 48px;
+
         display: flex;
-        flex-direction: column;
-        justify-content: center;
-    }    
+        align-items: center;
+        justify-content: space-between;
 
-    .page-header . header-content strong {
-        max-width: 350px;
-
+        padding: 1.6rem 0;
     }
 
-    .teacher-item header,
-    .teacher-item footer {
-        padding: 32px
+    .page-header .top-bar-container a {
+        height: 3.2rem;
+        transition: opacity 0.2s;
     }
 
-    #search-teachers {
-        display: grid;
-        grid-template-columns: repeat(4,1fr);
-        gap: 16px;
-        position: absolute;
-        bottom: -28px;
+    .page-header .top-bar-container a:hover{
+        opacity: 0.6;
+    }
+   
+    .page-header .top-bar-container img {
+        height: 1.6rem;
+    }
+
+    .page-header .header-content {
+        width: 90%;
+        margin: 3.2rem auto;
+
+        position: relative;
+    }
+
+    .page-header .header-content strong {
+        font: 700 3.6rem Archivo;
+        line-height: 4.2rem;
+        color: var(--color-title-in-primary);
     }
