--- a/styles/partials/header.css
+++ b/styles/partials/header.css
@@ -128,3 +128,58 @@
         .teacher-item footer button img {
             margin-right: 16px;
         }
+
+        .teacher-item header,
+        .teacher-item footer {
+            padding: 32px;
+        }
+
+        #search-teachers {
+            display: grid;
+            grid-template-columns: repeat(4, 1fr);
+            gap: 16px;
+            position: absolute;
+            bottom: -28px;
+        }
+
+        #page-study main {
+            padding: 32px 0;
+            max-width: 740px;
+            margin: 0 auto;
+
+        }
+
+        #search-teachers .select-block {
+            margin-bottom: 0;
+        }
+
+        .teacher-item > p {
+            padding: 0 32px;
+        }
+        
+        .teacher-item footer p strong {
+            display: inital;
+            margin-left: 16px;
+        }
+
+        .teacher-item footer button    {
+            width: 245px;
+            font-size: 16px;
+            justify-content: center;
+        }
+
+        .teacher-item footer button img {
+            margin-right: 16px; 
+
+        }
+
+        .teacher-item footer button {
+            width: 245px;
+            font-size: 16px;
+            justify-content: center;
+            
+        }
+
+        .teacher-item footer button img {
+            margin-right: 16px;
+        }
