--- a/styles/partials/header.css
+++ b/styles/partials/header.css
@@ -26,7 +26,7 @@
         opacity: 0.6;
     }
    
-    .page-header .top-bar-container img {
+    .page-header .top-bar-container > img {
         height: 1.6rem;
     }
 
