--- a/styles/partials/page-give-classes copy.css
+++ b/styles/partials/page-give-classes copy.css
@@ -13,3 +13,8 @@
     padding-top: 6.4rem;
 }
 
+@media (min-width: 700px) {
+    #page-giva-classes #container {
+        max-width: 100vw; 
+    }
+}
