--- a/styles/partials/forms.css
+++ b/styles/partials/forms.css
@@ -6,7 +6,8 @@
     }
 
     .input-block input,
-    .select-block select {
+    .select-block select,
+    .textarea-block textarea {
         width: 100%;
         height: 5.6rem;
         margin-top: 0.8rem;
