--- a/styles/partials/page-give-classes copy.css
+++ b/styles/partials/page-give-classes copy.css
@@ -13,6 +13,12 @@
     padding-top: 6.4rem;
 }
 
+#page-give-classes fieldset {
+    border: none;
+
+    padding: 0 2.4rem;
+}
+
 @media (min-width: 700px) {
     #page-giva-classes #container {
         max-width: 100vw; 
