--- a/styles/partials/forms.css
+++ b/styles/partials/forms.css
@@ -1,6 +1,7 @@
 
     .select-block label,
-    .input-block label {
+    .input-block label,
+    .textarea-block label {
         font-size: 1.4rem;
         color: var(--color-text-complement);
     }
@@ -18,12 +19,14 @@
         padding: 0 1.6rem;
         font: 1.6rem Archivo;
     }
-    .input-block{
+    .input-block,
+    .textarea-block {
         position: relative;
     }
 
 
-    .input-block:focus-within::after{
+    .input-block:focus-within::after,
+    .textarea-block:focus-within::after {
         content: "";
 
         width: calc(100% - 3.2rem);
