--- a/styles/partials/forms.css
+++ b/styles/partials/forms.css
@@ -19,6 +19,15 @@
         padding: 0 1.6rem;
         font: 1.6rem Archivo;
     }
+
+    .textarea-block textarea {
+        padding: 1.2rem 1.6rem;
+        height: 16rem;
+
+        resize: vertical;
+    }
+
+
     .input-block,
     .textarea-block {
         position: relative;
