--- a/styles/partials/page-give-classes copy.css
+++ b/styles/partials/page-give-classes copy.css
@@ -19,6 +19,15 @@
     padding: 0 2.4rem;
 }
 
+#page-give-classes fieldset legend {
+    font: 700 2.4rem Archivo;
+    color:  var(--color-text-title);
+    margin-bottom: 2.4rem;
+
+    display: flex;
+    align-items: center;
+}
+
 @media (min-width: 700px) {
     #page-giva-classes #container {
         max-width: 100vw; 
