--- a/styles/partials/page-give-classes copy.css
+++ b/styles/partials/page-give-classes copy.css
@@ -26,6 +26,14 @@
 
     display: flex;
     align-items: center;
+    justify-content: space-between;
+
+    width: 100%;
+
+    padding-bottom: 1.6rem;
+    border-bottom: 1px solid var(--color-line-in-white);
+
+
 }
 
 @media (min-width: 700px) {
