--- a/styles/partials/page-give-classes.css
+++ b/styles/partials/page-give-classes.css
@@ -32,9 +32,14 @@
 
     padding-bottom: 1.6rem;
     border-bottom: 1px solid var(--color-line-in-white);
-
-
 }
+
+#page-give-classes .input-block+.input-block
+#page-give-classes .input-block+.textarea-block {
+    margin-top: 2.4rem;
+}
+
+
 
 @media (min-width: 700px) {
     #page-giva-classes #container {
