--- a/styles/partials/page-give-classes.css
+++ b/styles/partials/page-give-classes.css
@@ -3,6 +3,10 @@
     height: 100vh;
 }
 
+#page-give-classes .page-header .header-content {`
+    margin-bottom: 6.4rem;
+}
+
 
 #page-give-classes main {
     background: var(--color-box-base);
@@ -34,10 +38,17 @@
     border-bottom: 1px solid var(--color-line-in-white);
 }
 
-#page-give-classes .input-block+.input-block
-#page-give-classes .input-block+.textarea-block {
+#page-give-classes fieldset+fieldset {
+    margin-top: 6.4rem;
+}
+
+#page-give-classes .input-block+.input-block,
+#page-give-classes .input-block+.textarea-block, 
+#page-give-classes .select-block+.input-block{
     margin-top: 2.4rem;
 }
+
+
 
 
 
