--- a/styles/partials/page-give-classes.css
+++ b/styles/partials/page-give-classes.css
@@ -38,6 +38,10 @@
     border-bottom: 1px solid var(--color-line-in-white);
 }
 
+#page-give-classes fieldset legend button {
+    
+}
+
 #page-give-classes fieldset+fieldset {
     margin-top: 6.4rem;
 }
