--- a/styles/partials/page-give-classes.css
+++ b/styles/partials/page-give-classes.css
@@ -42,17 +42,17 @@
     background-color: none;
     border: 0;
 
-    color: var(--oclor-primary) ;
+    color: var(--color-primary);
 
-    font: 700 1.6rem Archivos;
+    font: 700 1.6rem Archivo;
     
     cursor: pointer;
 
-    transition: 0.2;
+    transition: 1;
 
 }
-#page-give-classes fieldset legend button::hover{
-    transform: translate(-5px);
+#page-give-classes fieldset legend button:hover{
+    transform: translateY(-5px); 
     color: var(--color-primary-dark);
 }
 
