--- a/styles/partials/page-give-classes.css
+++ b/styles/partials/page-give-classes.css
@@ -39,7 +39,7 @@
 }
 
 #page-give-classes fieldset legend button {
-    background-color: none;
+    background: none;
     border: 0;
 
     color: var(--color-primary);
@@ -48,7 +48,7 @@
     
     cursor: pointer;
 
-    transition: 1;
+    transition: 0.2s;
 
 }
 #page-give-classes fieldset legend button:hover{
@@ -67,6 +67,17 @@
 }
 
 
+#page-give-classes main footer {
+    padding: 4rem 2.4rem;
+
+    background: var(--color-box-footer);
+    border-top: 1px solid var(--color-line-in-white);
+    margin-top: 6.4rem;
+}
+
+#page-give-classes main footer p{
+    
+}
 
 
 
