--- a/styles/partials/page-give-classes.css
+++ b/styles/partials/page-give-classes.css
@@ -76,7 +76,15 @@
 }
 
 #page-give-classes main footer p{
-    
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    font-size: 1.4rem;
+    line-height: 2.4rem;
+
+    color: var(--color-text-complement);
+
 }
 
 
