--- a/styles/partials/page-give-classes.css
+++ b/styles/partials/page-give-classes.css
@@ -87,7 +87,26 @@
 
 }
 
+#apge-give-classes main footer p img{
+    margin-right: 2rem;
+}
 
+#page-give-classes main footer button {
+    width: 100%;
+    height: 5.6rem;
+    background: var(--color-secundary);
+    color: var(--color-button-text);
+    border: 0;
+    border-radius: .8rem;
+    cursor: pointer;
+    font: 700 1.6rem Archivo;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-decoration: none;
+    transition: 0.2s;
+    margin-top: 3.2rem;
+}
 
 @media (min-width: 700px) {
     #page-giva-classes #container {
