--- a/styles/partials/page-give-classes.css
+++ b/styles/partials/page-give-classes.css
@@ -100,13 +100,28 @@
     border-radius: .8rem;
     cursor: pointer;
     font: 700 1.6rem Archivo;
+
     display: flex;
     align-items: center;
     justify-content: center;
     text-decoration: none;
+
     transition: 0.2s;
     margin-top: 3.2rem;
 }
+
+
+#page-give-classes main footer button:houver {
+    background: var(--color-secundary-dark);
+}
+
+.schedule-item+.schedule-item {
+    margin-top: 3.2rem;
+    padding-top: 3.2rem;
+
+    border-top: 1px solid var(--color-line-in-white);
+}
+
 
 @media (min-width: 700px) {
     #page-giva-classes #container {
