--- a/styles/partials/page-give-classes.css
+++ b/styles/partials/page-give-classes.css
@@ -127,6 +127,28 @@
     #page-giva-classes #container {
         max-width: 100vw; 
     }
+
+
+    #page-give-classes .page-header .header-content{
+        margin-bottom: 0;
+    }
+
+    #page-give-classes main fieldset {
+        padding: 0 64px;
+    }
+
+    .select-block{
+        display: grid;
+        grid-template-columns: 2fr 1fr 1fr;
+        column-gap: 1.6rem;
+    }
+
+    #page-give-classes .select-block+.input-block,
+    #page-give-classes .input-block+.input-block, {
+        margin-top: 0;
+    }
+
+
 }
 
 
