realizado diversas correçoes nas minhas linhas de codigos

--- a/styles/partials/page-give-classes.css
+++ b/styles/partials/page-give-classes.css
@@ -143,8 +143,8 @@
         column-gap: 1.6rem;
     }
 
-    #page-give-classes #shedule-items .select-block+.input-block,
-    #page-give-classes #shedule-items .input-block+.input-block {
+    #page-give-classes .select-block+.input-block,
+    #page-give-classes .input-block+.input-block {
         margin-top: 0;
     }
 
