--- a/styles/partials/page-give-classes.css
+++ b/styles/partials/page-give-classes.css
@@ -143,10 +143,25 @@
         column-gap: 1.6rem;
     }
 
-    #page-give-classes .select-block+.input-block,
-    #page-give-classes .input-block+.input-block {
+    #page-give-classes #schedule-items .select-block+.input-block,
+    #page-give-classes #schedule-items .input-block+.input-block {
         margin-top: 0;
     }
+
+    #page-give-classes main footer {
+        padding: 40px 64;
+
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+    }
+
+    #page-give-classes main footer button{
+        margin-top: 0;
+
+        width: 200px;
+    }
+
 
 
 }
