--- a/Anotaçoes/Anotaçoes.css
+++ b/Anotaçoes/Anotaçoes.css
@@ -26,7 +26,7 @@
             (--color-primary-darker); = 
 
 
-            
+
 
 - TAG :root signifca que estou sugerindo ao css, toda minha pagina html.
     Em outras palavras "A pseudo-classe CSS  :root se equipara à raíz de uma
@@ -47,3 +47,57 @@
      }
 
 
+
+
+- TAG font-size. Esse elemento estabelece o tamanho da fonte. exemplo:
+
+            font-size: 100% (tamanho padrão)
+            font-size: 60% (alteraçoes no tamanho da fonte, parte pela %)
+
+    Forma de incluir esse elemento no seu style é dentro do body. exemplo:
+     
+            body{
+                background-color: var(--color-background);
+                font-size: 50%¨;
+            }
+
+    Também pode ser usado
+
+            body {
+                font-size: 50%;
+                font-size: 2rm;
+                font-size: 20px;
+            }
+            
+
+
+
+- TAG * .Significa elemento qualquer ou muitos elementos. Exemplo
+
+            *{
+                margin: 0;
+                padding: 0;
+                box-sizing: border-box;
+            
+            }
+
+
+- BOX MODEL tamanho e conteudo 
+
+                Border: Significar criar uma caixa dentro da sua pagina. Exemplo
+
+                #container{
+                    border: 1px solid red;
+                }
+
+                padding: É seu preenchimento, esse preenchimento segue elementos de % no sentindo horário. 
+                exemplo:
+
+                Padding: 10px 40px 60px 2px
+
+                Seria 
+
+                10px = 12:00
+                40px = 3:00
+                60px = 6:00
+                2px  = 9:00
