--- a/style.css
+++ b/style.css
@@ -31,3 +31,37 @@
     padding: 0;
     box-sizing: border-box;
 }
+
+html,
+body {
+    height: 100vh;
+}
+
+
+body {
+    height: 100vh;
+    background: var(--color-background);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+}
+
+
+body,
+input,
+button,
+textarea {
+    
+    /*font: 500 1.6rem Poppins; */
+    font-weight: 500;
+    font-family: poppins;
+    font-size: 1.6rem;
+    color: var(--color-text-base);
+}
+
+#container {
+    width: 90vw; 
+    max-width: 700px;
+    
+}
