Alteração nas minhas anotaçoes para iniciar minha nova extrutura

--- a/style.css
+++ b/style.css
@@ -1,14 +1,14 @@
 /* CSS - Cascading StyleSheet */
 
- :root {
-    --color-background: #f0f0f7;
+:root {
+    --color-background: #F0F0F7;
     --color-primary-lighter: #9871F5;
     --color-primary-light: #916BEA;
     --color-primary: #8257E5;
     --color-primary-dark: #774DD6;
-    --color-primary-darker: #6842C2;
-    --color-secundary: #04D361;
-    --color-secundary-dark: #04BF58;
+    --color-primary-darker: #6842c2;
+    --color-secondary: #04D361;
+    --color-secondary-dark: #04BF58;
     --color-title-in-primary: #FFFFFF;
     --color-text-in-primary: #D4C2FF;
     --color-text-title: #32264D;
@@ -20,9 +20,7 @@
     --color-box-base: #FFFFFF;
     --color-box-footer: #FAFAFC;
     --color-small-info: #C1BCCC;
-
-
-    font-size: 60%; /*controle das medidas rem */
+    font-size: 60%; /* controle das medidas rem */
 } 
 
 
