--- a/Anotaçoes/Anotaçoes.css
+++ b/Anotaçoes/Anotaçoes.css
@@ -109,3 +109,15 @@
 17/03/2021
 
 00:00:00
+
+
+
+- TAG border-radius serve para arredondar as bordas de algo exem:
+
+                .buttons-container a {
+                    width: 30rem;
+                    height: 10.4rem;
+
+                    background-color: red;
+                    border-radius: 2rem;
+                }
