--- a/styles/partials/page-landing.css
+++ b/styles/partials/page-landing.css
@@ -1,8 +1,3 @@
-:root {
-    font-size: 40%;
-}
-
-
 #page-landing {
     background: var(--color-primary);
 
@@ -95,6 +90,14 @@
     margin-left: 0.8rem;
 }
 
+
+@media (max-width: 699px){
+    :root {
+        font-size: 40%; /*modificar as medidas rem */
+    }
+}
+
+
 @media (min-width: 1100px) {
     #page-landing #container {
         max-width: 1100px;
@@ -104,7 +107,8 @@
         grid-template-areas: 
         "proffy image image"
         "button button texting";
-        gap: 60px;
+        column-gap: 87px;
+        row-gap: 86px;
 
 }
 
@@ -112,21 +116,26 @@
     grid-area: proffy;
     text-align: initial;
     align-self: center;
+    margin: 0;
 }
 
 .logo-container img {
-    height: 100%;
+    height: 127px;
 }
 
 .hero-image {
     grid-area: image;
+    height: 350px;
 }
 .buttons-container {
     grid-area: button;
     justify-content: flex-start;
+    margin: 0;
 
 }
 .total-connections {
     grid-area: texting;
     justify-self: end;
+    font-size: 1.2rem;
+
 }
