--- a/styles/partials/page-study.css
+++ b/styles/partials/page-study.css
@@ -58,3 +58,32 @@
 #search-teachers .select-block {
     margin-bottom: 1.4rem;
 }
+
+#search-teachers button {
+    width: 100%;
+    height: 5.6rem;
+    background: var(--color-secondary);
+    color: var(--color-button-text);
+    border:0;
+    border-radius: .8rem;
+    cursor: pointer;
+    font: 700 1.6rem Archivo;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-decoration: none;
+    transition: background 0.2s;
+    margin-top: 3.2rem; 
+}
+
+#search-teachers button:hover {
+    background-color: var(--color-secondary-dark);
+
+}
+
+.select-block label, 
+.input-block label {
+    font-size: 1.4rem;
+    color: var(--color-text-complement);
+    
+}
