Não conseguir chegar em um resultado final, todo commit a parti de agora é correção das codadas mal dada

--- a/styles/partials/page-study.css
+++ b/styles/partials/page-study.css
@@ -85,5 +85,18 @@
 .input-block label {
     font-size: 1.4rem;
     color: var(--color-text-complement);
-    
+
+}
+
+.input-block input,
+.select-block select {
+    width: 100%;
+    height: 5.6rem;
+    margin-top: 0.6rem;
+    border-radius: 0.8rem;
+    background: var(--color-input-background);
+    border: 1px solid var(--color-line-in-white);
+    outline: 0;
+    padding: 0 1.6rem;
+    font: 10.6rem Archivo;
 }
