--- a/styles/partials/page-study.css
+++ b/styles/partials/page-study.css
@@ -28,7 +28,7 @@
 
 }
 
-.page-header .top-bar-container a:houver {
+.page-header .top-bar-container a:hover {
     opacity: 0.6;
 }
 
@@ -64,7 +64,7 @@
     height: 5.6rem;
     background: var(--color-secondary);
     color: var(--color-button-text);
-    border:0;
+    border: 0;
     border-radius: .8rem;
     cursor: pointer;
     font: 700 1.6rem Archivo;
@@ -72,6 +72,7 @@
     align-items: center;
     justify-content: center;
     text-decoration: none;
+
     transition: background 0.2s;
     margin-top: 3.2rem; 
 }
@@ -92,7 +93,7 @@
 .select-block select {
     width: 100%;
     height: 5.6rem;
-    margin-top: 0.6rem;
+    margin-top: 0.8rem;
     border-radius: 0.8rem;
     background: var(--color-input-background);
     border: 1px solid var(--color-line-in-white);
