finalizando segunda interface

--- a/styles/partials/page-study.css
+++ b/styles/partials/page-study.css
@@ -98,7 +98,23 @@
     outline: 0;
     padding: 0 1.6rem;
     font: 1.6rem Archivo;
-   
+}
+
+.input-block {
+    position: relative;
+}
+
+.input-block:focus-within::after {
+    content: "";
+
+    width: calc(100% - 3.2rem);
+    height: 2px;
+    background: var(--color-primary-light);
+
+    position: absolute;
+    left: 1.6rem;
+    right: 1.6rem;
+    bottom: 0;
 }
 
 
