--- a/styles/partials/page-study.css
+++ b/styles/partials/page-study.css
@@ -114,9 +114,32 @@
     position: absolute;
     left: 1.6rem;
     right: 1.6rem;
-    bottom: 0;
+    bottom: 0px;
 }
 
+.teacher-item {
+    background-color: var(--color-box-base);
+    border: 1px solid var(--color-line-in-white);
+    border-radius: .8rem;
+    margin-top: 2.4rem;
+}
 
+.teacher-item header {
+    padding: 3.2rem 2rem;
+    display: flex;
+    align-items: center;
+}
 
+.teacher-item header img {
+    width: 8rem;
+    height: 8rem;
+    border-radius: 50%;
+}
 
+.teacher-item .header div {
+    margin-left: 2.4rem;
+}
+
+.teacher-item header div strong {
+    font: 700 2.4rem Archivo;
+}
