--- a/styles/partials/page-study.css
+++ b/styles/partials/page-study.css
@@ -205,3 +205,21 @@
 .teacher-item footer button:hover {
     background: var(--color-secondary-dark);
 } 
+
+
+@media (min-width:700px) {
+    #page-study #container {
+        max-width: 100vw;
+    }
+    
+    .teacher-item header,
+    .teacher-item footer {
+        padding: 32px;
+    }
+    
+    #search-teachers {
+        display: grid;
+        grid-template-columns: repeat(4,1fr);
+        gap: 16px;
+
+    }
