--- a/styles/partials/page-study.css
+++ b/styles/partials/page-study.css
@@ -38,6 +38,8 @@
 .page-header .header-content {
     width: 90%;
     margin: 3.2rem auto;
+
+    position: relative;
 }
 
 .page-header .header-content strong{
@@ -211,6 +213,33 @@
     #page-study #container {
         max-width: 100vw;
     }
+
+    .page-header {
+        height: 340px;
+    }
+
+    .page-header .top-bar-container {
+        max-width: 1100px;
+    }
+
+    .page-header .header-content {
+        max-width: 740px;
+
+        margin: 0 auto;
+
+        flex: 1  1;
+        padding-bottom: 48px;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+
+    }
+
+    .page-header .header-content strong {
+        max-width: 350px;
+    }
+
+
     
     .teacher-item header,
     .teacher-item footer {
@@ -221,5 +250,13 @@
         display: grid;
         grid-template-columns: repeat(4,1fr);
         gap: 16px;
+        position: absolute;
+        bottom: -28px;
 
     }
+
+    #page-study main {
+        padding: 32px 0;
+        max-width: 740px;
+    }
+}
