--- a/styles/partials/page-study.css
+++ b/styles/partials/page-study.css
@@ -154,7 +154,7 @@
     margin-top: .4rem;
 }
 
-.teacher-item p {
+.teacher-item > p {
     padding: 0 2rem;
     font-size: 1.6rem;
     line-height: 2.8rem;
@@ -227,7 +227,7 @@
 
         margin: 0 auto;
 
-        flex: 1  1;
+        flex: 1 1;
         padding-bottom: 48px;
         display: flex;
         flex-direction: column;
@@ -248,7 +248,7 @@
     
     #search-teachers {
         display: grid;
-        grid-template-columns: repeat(4,1fr);
+        grid-template-columns: repeat(4, 1fr);
         gap: 16px;
         position: absolute;
         bottom: -28px;
@@ -258,5 +258,31 @@
     #page-study main {
         padding: 32px 0;
         max-width: 740px;
+        margin: 0 auto;
+    }
+
+    #search-teachers .select-block {
+        margin-bottom: 0;
+    }
+
+    .teacher-item > p {
+        padding: 0 32px;
+
+    }
+
+    .teacher-item footer p strong {
+        display: initial;
+        margin-left: 16px;
+    }
+
+    .teacher-item footer button {
+        width: 245px;
+        font-size: 16px;
+        justify-content: center;
+
+    }
+
+    .teacher-item footer button img {
+        margin-right: 16px;
     }
 }
