--- a/styles/partials/page-give-classes.css
+++ b/styles/partials/page-give-classes.css
@@ -2,3 +2,13 @@
     width: 100vw;
     height: 100vh;
 }
+
+#page-give-classes main {
+    background: var(--color-box-base);
+    width: 100%;
+    max-width: 74rem;
+    border-radius: .8rem;
+    margin: -3.2rem auto 3.2rem;
+    padding-top: 6.4rem;
+}
+
