--- a/styles/partials/page-give-classes.css
+++ b/styles/partials/page-give-classes.css
@@ -12,3 +12,30 @@
     padding-top: 6.4rem;
 }
 
+#page-give-classes fieldset {
+    border: none;
+
+    padding: 0 2.4rem;
+}
+
+#page-give-classes fieldset legend {
+    font: 700 2.4rem Archivo;
+    color: var(--color-text-title);
+    margin-bottom: 2.4rem;
+
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+
+    width: 100%;
+
+    padding-bottom: 1.6rem;
+    border-bottom: 1px solid var(--color-line-in-whiter);
+
+}
+
+@media(min-width: 700px) {
+    #page-give-classes #container {
+        max-width: 100vw;
+    }
+}
