--- a/styles/partials/pratica.css
+++ b/styles/partials/pratica.css
@@ -36,3 +36,17 @@
 #search-teachers button:hover {
     background-color: var(--color-secondary-dark);
 }
+
+.teacher-item {
+    background-color: var(--color-box-base);
+    border: 1px solid var(--color-line-in-white);
+    border-radius: .8rem;
+    margin-top: 2.4rem;
+}
+
+.teacher-item header {
+    padding: 3.2rem 2rem;
+    display: flex;
+    align-items: center;
+}
+
