--- a/styles/partials/pratica.css
+++ b/styles/partials/pratica.css
@@ -102,5 +102,25 @@
 }
 
 .teacher-item footer button {
-    wid
+    width: 20rem;
+    height: 5.6rem;
+    background: var(--color-secondary-dark);
+    color: var(--color-button-text);
+    border: 0;
+    border-radius: .8rem;
+    cursor: pointer;
+    font: 700 1.4rem Archivo;
+
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+
+    text-decoration: none;
+
+    transition: background 0.2s;
+    margin-left: 1.6rem;
+}
+
+.teacher-item footer button:hover {
+    background: var(--color-secondary-dark);
 }
