--- a/styles/partials/pratica.css
+++ b/styles/partials/pratica.css
@@ -12,4 +12,28 @@
     width: 100%;
     max-width: 74rem;
     border-radius: .8rem;
+    margin: -3.2rem auto 3.2rem;
+    padding-top: 6.4rem;
+}
+
+#page-give-classes fieldset {
+    border: none;
+
+    padding: 0 2.4rem;
+}
+
+#page-give-classes fieldset legend {
+    font:700 2.4rem Archivo;
+    color: var(--color-text-title);
+    margin-bottom: 2.4rem;
+
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+
+    width: 100%;
+
+    padding-bottom: 1.6rem;
+    border-bottom: 1px solid var(--color-line-in-whiter);
+
 }
