Apenas praticando input-block textarea-bloxk input-block

--- a/styles/partials/pratica.css
+++ b/styles/partials/pratica.css
@@ -62,3 +62,8 @@
 }
 
 
+#page-give-classes .input-block+.input-block,
+#page-give-classes .input-block+.textarea-blck,
+#page-give-classes .select-block+.input-block{
+    margin-top: 2.4rem;
+}
