--- a/styles/partials/page-give-classes.css
+++ b/styles/partials/page-give-classes.css
@@ -77,6 +77,20 @@
     margin-top: 6.4rem;
 }
 
+#page-give-classes main footer p{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    font-size: 1.4rem;
+    line-height: 2.4rem;
+
+    color: var(--color-text-complement);
+}
+
+#page-give-classes main footer p img{
+    margin-right: 2rem;
+}
 
 
 
