--- a/styles/partials/page-give-classes.css
+++ b/styles/partials/page-give-classes.css
@@ -92,7 +92,28 @@
     margin-right: 2rem;
 }
 
-#page-give-classes main footer button {}
+#page-give-classes main footer button {
+    width: 100%;
+    height: 5.6rem;
+    background: var(--color-secundary);
+    color: var(--color-button-text);
+    border: 0;
+    border-radius: .8rem;
+    cursor: pointer;
+    font: 700 1.6rem Archivo;
+    
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-transform: none;
+    
+    transition: 0.2s;
+    margin-top: 3.2rem;
+}
+
+#page-give-classes main footer button:hover {
+    background: var(--color-secundary-dark);
+}
 
 
 
