--- a/Anotaçoes/pratica.css
+++ b/Anotaçoes/pratica.css
@@ -122,3 +122,21 @@
 
 }
 
+
+@media (min-width:700px) {
+    #apge-study #container {
+        max-width: 100vw;
+    }
+
+    .page-header {
+        height: 340px;
+    }
+
+    .page-header .top-bar-container {
+        max-width: 1100px;
+    }
+
+    .page-header .header-content {
+        max-width: 740px;
+    }
+}
